--- a/src/main/resources/templates/portal/iv/survey/list.html
+++ b/src/main/resources/templates/portal/iv/survey/list.html
@@ -1,3 +1,172 @@
+<!DOCTYPE html>
+<html
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
+<th:block layout:fragment="content">
+	
+	<div class="block-header">
+		<div class="block-title" th:text="설문조사"></div>
+		<div class="block-button-area">
+			<button id="BTN_write" type="button">설문등록</button>
+			<button id="BTN_search" type="button">검색</button>
+		</div>
+	</div>
+	
+	<div class="condition-area">
+	<table class="condition table-fixed">
+		<tbody>
+			<tr>
+				<td width="10%"> 
+					<div>
+						<select id="fgStatus" name="fgStatus" onchange="doSearch();">
+							<option value="0">전체보기</option>
+							<option value="1">설문작성중</option>
+							<!-- <option value="2">설문대기중</option> -->
+							<option value="2">설문진행</option>
+							<option value="3">설문완료</option>
+						</select>
+					</div>
+				</td>
+				<td>
+					<div class="input-area">
+						<input type="text" id="query" name="query" class="custom-ui" onkeyup="if(event.keyCode =='13') doSearch();"/>
+					</div>				
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	</div>
+	
+	<div class="grid-info">
+		<div class="grid-total">
+			<div class="split"></div>
+			<span class="total-number" id="totalRows"></span>
+		</div>
+	</div>
+	
+	<div id="AREA_grid" class="flex-grow grid-area">
+		<table id="TBL_grid" class="order-column stripe compact"></table>
+	</div>
 
 
-설문조사 등록 페이지
+
+<script>
+let $tableObj;
+$(function(){
+	console.log('list');
+	
+	$tableObj = $("#TBL_grid").DataTable({
+		select: {
+			selector: "td:not(.noselect)"
+	    },
+		ordering: true, 
+		scrollY: 100,
+		columns : [
+			{data:"sseq", 			title: "번호",		"width": "5%"},
+			{data:"fgStatus",		title: "상태", 		"width": "8%"},
+			{data:"validFrom",		title: "공지기간", 	"width": "15%"},
+			{data:"validTo",		title: "공지기간", 	"width": "15%"},
+			{data:"title", 			title: "설문제목"},
+			{data:"fgOpenResult",	title: "결과", 		"width": "8%"},
+			{data:"regUsername", 	title: "작성자", 		"width": "10%"},
+			{data:"applier", 		title: "참여", 		"width": "8%"},
+			{data:null, 			title: "비고", 		"width": "10%"},
+			{data:"validFromYmd",	title: "공지기간", 	"width": "15%"},
+			{data:"validToYmd",		title: "공지기간", 	"width": "15%"}
+		],
+		columnDefs: [
+			{targets: [0, 5, 6, 7], className: "dt-body-center"},
+			{targets: 1, className: "dt-body-center", 
+				createdCell: function(td, cellData, rowData, row, col) {
+					let color = '';
+					switch (cellData) {
+					case '1' :
+						color = 'grey';
+					break;
+					case '2' :
+						color = 'blue';
+					break;
+					default :
+						color = 'black';
+					break;
+					}
+					
+					$(td).css('color', color);
+				},
+				render: function(data, type, row) {
+					return {'0': '-', '1': '설문작성중', '2':'설문진행', '3':'설문완료'}[data];
+				}
+			},
+			{targets: [2,3], className: "dt-body-center", render: function(data, type, row) {
+				//return moment(data.substr(0, 8)).format('YYYY.MM.DD') + ' ~ ' + moment(row['validTo'].substr(0, 8)).format('YYYY.MM.DD');
+				return row['validFromYmd'] + '  ~  ' + row['validToYmd'];
+			}},
+			{targets: [3, 9, 10], visible: false},
+			{targets: 4, className: "link clickable"},
+			{targets: 5, render: function(data, type, row) {
+				return {'Y':'공개', 'N':'비공개'}[data];
+			}},
+			{targets: 8, className: "dt-body-center", defaultContent:"<button>click</button>"},
+		],
+		
+		ajax: {
+			url: "[[${BASE_PATH}]]/survey/list/data",
+			data: function(p)
+			{
+				p.fgStatus 		= $("#fgStatus").val();
+				p.query 		= $("#query").val();
+			},
+			dataSrc: function(response) 
+			{
+				let result = response.RESULT;
+
+				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
+
+				return result;
+			}
+		},
+		paging : false, // 페이징 기능켬
+		//pageLength: 20, // 한 페이지에 20개 행
+		initComplete:function(settings, json)
+		{
+			ProgressBar.hide();
+			//this.api().page(2).draw("page");
+		}
+	});
+	
+	initGridTable($tableObj);
+	
+	$("#TBL_grid").on("click", '.clickable',  function(event){
+		let data = $tableObj.row( $(this).parents('tr') ).data();
+		doWrite(data['sseq']);
+	});
+	
+	$("#TBL_grid").on("click", 'button',  function(event){		
+		let data = $tableObj.row( $(this).parents('tr') ).data();
+		//alert(data['sseq']);
+		
+		//to-do: 권한에 따라 다른 처리
+		Popup.open("[[${BASE_PATH}]]/survey/popup/view?sseq="+data['sseq'], 1100, 600);
+	});
+	
+	$("#BTN_search").on("click", function(){		
+		doSearch();			// dataTable의 ajax 설정을 이용해  다시 조회. 
+	});
+	
+	$("#BTN_write").on("click", function() {
+		doWrite(0);
+	});
+});
+
+function doWrite(sseq) 
+{
+	document.location.href = "[[${BASE_PATH}]]/survey/write?sSeq="+sseq;
+}
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+}
+</script>
+</th:block>	
