--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -230,7 +230,7 @@ function goHome()
 
 function clickUserInfo()
 {
-	Popup.open("/portal/corp/eu/common/info/user/account_form", 600, 250);
+	Popup.open("/portal/iv/user/write", 700, 300);
 };
 
 function clickDealerInfo()
