--- a/src/main/resources/templates/portal/iv/sso/bulletin.html
+++ b/src/main/resources/templates/portal/iv/sso/bulletin.html
@@ -26,7 +26,7 @@
 		vertical-align: middle;
 	}
 	
-	.guide-go-gpes {
+	.guide-go {
 		margin-top: 20px; font-weight:bold;
 	}
 </style>
@@ -34,8 +34,8 @@
 		<div style="margin-top:138px;">
 			<img src="/portal/img/popup/confirm.png" />
 		</div>
-		<div class="guide-go-gpes" th:text="#{PTL_T_MOVE_TO_BULLETIN}"></div>
-		<div class="guide-go-gpes" th:text="#{PTL_T_GUIDE_MOVE_TO_BULLETIN_MANUALLY}"></div>
+		<div class="guide-go" th:text="#{PTL_T_MOVE_TO_BULLETIN}"></div>
+		<div class="guide-go" th:text="#{PTL_T_GUIDE_MOVE_TO_BULLETIN_MANUALLY}"></div>
 		<div style="width:auto; height:220px; background-color: #f9f9f9; margin: 40px 40px 0 40px;">
 			<div style="height: 30px;"></div>
 			<button id="BTN_go" class="gomain-button"><span th:text="#{PTL_B_GO_BULLETIN}"></span> <img src="/portal/img/common/arrow_right.png" /></button>
@@ -44,9 +44,8 @@
 <script>
 let url = "https://gpes.doosan-iv.com/ssoextra/sso_login_doobiz.jsp?p_encryptsso=[[${key}]]&BULLETIN_STS=NEW_BULL&PART_NO=&LAN_CD=EN";
 
-$("#BTN_refresh").on("click", function() {
+$("#BTN_go").on("click", function() {
 	window.open(url);
-	$("#content").prop("src", url);
 });
 
 $(function(){
