--- a/src/main/resources/templates/portal/iv/survey/list.html
+++ b/src/main/resources/templates/portal/iv/survey/list.html
@@ -49,7 +49,9 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 
-
+	<form id="FORM_search" th:action="|${BASE_PATH}/survey/list|">
+		<input type="hidden" name="sSeq" id="sSeq"/>
+	</form>
 
 <script>
 let $tableObj;
@@ -139,7 +141,7 @@ $(function(){
 	
 	$("#TBL_grid").on("click", '.clickable',  function(event){
 		let data = $tableObj.row( $(this).parents('tr') ).data();
-		doWrite(data['sseq']);
+		goView(data['sseq']);
 	});
 	
 	$("#TBL_grid").on("click", 'button',  function(event){		
@@ -155,13 +157,22 @@ $(function(){
 	});
 	
 	$("#BTN_write").on("click", function() {
-		doWrite(0);
+		goWrite();
 	});
 });
 
-function doWrite(sseq) 
+function goView(sSeq) {
+	
+	document.location.href = "[[${BASE_PATH}]]/survey/view?sSeq="+sSeq;
+	/* $("#FORM_search").attr("action", "[[${BASE_PATH}]]/survey/view");
+	$("#FORM_search").submit(); */
+}
+
+function goWrite() 
 {
-	document.location.href = "[[${BASE_PATH}]]/survey/write?sSeq="+sseq;
+	document.location.href = "[[${BASE_PATH}]]/survey/write";	
+	/* $("#FORM_search").attr("action", "[[${BASE_PATH}]]/survey/write");
+	$("#FORM_search").submit(); */
 }
 
 function doSearch()
