--- a/src/main/resources/templates/portal/iv/board/write.html
+++ b/src/main/resources/templates/portal/iv/board/write.html
@@ -98,7 +98,7 @@
 					<div style="display: block; height: 1px; background-color: #cccccc; margin-top:2px; margin-bottom:2px;"></div>
 					<div class="split-row-more-compact"></div>
 					<div id="attachedFiles" style="width:100%; height:5em; display: block; overflow-y: auto;">
-						<div th:each="uploadFileList : ${boardContent.uploadFileLists}">
+						<div th:each="uploadFileList : ${boardContent?.uploadFileLists}">
 							<input name="uflSeq" type="checkbox" th:value="${uploadFileList.uflSeq}" class="custom-ui" th:fileName="${uploadFileList.fullOriginName}"/><label th:text="${uploadFileList.fullOriginName}"></label>
 							<div class="split2"></div><span th:text="${uploadFileList.displayFileSize}"></span>
 						</div>
