--- a/src/main/resources/templates/portal/iv/survey/write.html
+++ b/src/main/resources/templates/portal/iv/survey/write.html
@@ -8,7 +8,7 @@
 	<div class="block-header" >
 		<div class="block-title" ></div>
 		<div class="block-button-area">
-			<button id="BTN_save" type="button" th:text="등록"></button>
+			<button id="BTN_save" type="button" th:text="저장"></button>
 			<button id="BTN_back" type="button" th:text="뒤로" onclick="goView();"></button>
 		</div>	
 	</div>	
